Добавил реализацию репозиториев через бд(PostgreSQL)